--- a/editopia/src/ComparisonSection.css
+++ b/editopia/src/ComparisonSection.css
@@ -13,11 +13,12 @@
   }
   
   h2 {
-    font-size: 3.5rem;
+    font-size: 4.0rem;
     font-weight: 600;
     line-height: 1.2;
     text-align: left;
     margin: 0;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     flex-grow: 1;
   }
   
@@ -64,8 +65,8 @@
     background-color: #333;
     color: white;
     border: none;
-    padding: 0.75rem 1.5rem;
-    font-size: 0.9rem;
+    padding: 0.95rem 2.0rem;
+    font-size: 1.1rem;
     border-radius: 25px;
     cursor: pointer;
     font-weight: 600;
@@ -83,24 +84,28 @@
     padding: 1.5rem;
     border-radius: 8px;
     text-align: left;
+    
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
   }
+
+ 
   
   .icon {
-    font-size: 1.5rem;
+    font-size: 2.1rem;
     margin-bottom: 1rem;
     color: #333;
   }
   
   .item h3 {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     margin-bottom: 0.5rem;
-    font-weight: 600;
+    font-weight: 700;
     color: #333;
   }
   
   .item p {
-    font-size: 0.9rem;
+    font-size: 1.0rem;
     color: #666;
     line-height: 1.4;
+    
   }
